# openarm_bilateral

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: follower.yaml  leader.yaml
docker/: Dockerfile
launch/: leftarm_bilateralcontrol.launch.py  leftarm_unilateralcontrol.launch.py  rightarm_bilateralcontrol.launch.py  rightarm_bilateralcontrol_logging.launch.py  rightarm_unilateralcontrol.launch.py
samples/: canfd_test.cpp  check_dynamics.cpp  check_grav_comp.cpp  constant_speed_test.cpp
script/: data_plot.py  socketcan_setting.sh  socketcanfd_setting.sh  test_fric_plot.py  torque_velocity_plot.py  vel_compare.py
script/socketcan_control/: DM_SocketCANFD.py  README.md  calibrate.py  canfd_test.py  change_baudrate.py  change_canid.py  change_gr.py  enable.py  go_to_pose.py  read_motor_param.py  read_only.py  record.py  replay.py  requirements.txt  switch_controlmode.py
src/: bilateral_main.cpp  bilateral_main_logging.cpp
src/canfd/: canbus.cpp  canbus.hpp
src/controller/: control.cpp  control.hpp  diff.hpp  dynamics.cpp  dynamics.hpp  global.hpp
src/dmmotor/: damiao_port.cpp  damiao_port.hpp  motor.cpp  motor.hpp  motor_control.cpp  motor_control.hpp
