<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
　Copyright 2025 Reazon Holdings, Inc.

　Licensed under the Apache License, Version 2.0 (the "License");
　you may not use this file except in compliance with the License.
　You may obtain a copy of the License at

　    http://www.apache.org/licenses/LICENSE-2.0

　Unless required by applicable law or agreed to in writing, software
　distributed under the License is distributed on an "AS IS" BASIS,
　WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
　See the License for the specific language governing permissions and
　limitations under the License.
-->
<package format="3">
  <name>openarm_bilateral</name>
  <version>1.0.0</version>
  <description>Bilateral Control for OpenArm Stationary Arms</description>
  <maintainer email='yusuke_toki@reazon.jp'>Toki Yusuke</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
